--- a/filesys/Makefile
+++ b/filesys/Makefile
@@ -556,7 +556,7 @@ exception.o: ../userprog/exception.cc ../threads/copyright.h \
  ../filesys/openfile.h ../threads/scheduler.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h \
- ../userprog/syscall.h
+ ../userprog/syscall.h ../userprog/syscall_utils.h
 progtest.o: ../userprog/progtest.cc ../threads/copyright.h \
  ../threads/system.h ../threads/copyright.h ../threads/utility.h \
  ../machine/sysdep.h /usr/include/stdlib.h /usr/include/features.h \
