--- a/Makefile.common
+++ b/Makefile.common
@@ -77,7 +77,11 @@ USERPROG_H = ../userprog/addrspace.h\
 	../machine/console.h\
 	../machine/machine.h\
 	../machine/mipssim.h\
-	../machine/translate.h
+	../machine/translate.h\
+        ../userprog/syscall_utils.h\
+        ../machine/synchconsole.h\
+        ../userprog/memorybitmap.h\
+        ../userprog/exception_imp.h
 
 USERPROG_C = ../userprog/addrspace.cc\
 	../userprog/bitmap.cc\
@@ -86,10 +90,15 @@ USERPROG_C = ../userprog/addrspace.cc\
 	../machine/console.cc\
 	../machine/machine.cc\
 	../machine/mipssim.cc\
-	../machine/translate.cc
+	../machine/translate.cc\
+        ../userprog/syscall_utils.cc\
+        ../machine/synchconsole.cc\
+        ../userprog/memorybitmap.cc\
+        ../userprog/exception_imp.cc
 
 USERPROG_O = addrspace.o bitmap.o exception.o progtest.o console.o machine.o \
-	mipssim.o translate.o
+	mipssim.o translate.o exception_imp.o synchconsole.o syscall_utils.o \
+        memorybitmap.o
 
 VM_H = 
 VM_C = 
