--- a/test/Makefile
+++ b/test/Makefile
@@ -35,7 +35,7 @@ INCDIR =-I../userprog -I../threads
 CFLAGS = -G 0 -c $(INCDIR) -mips1
 
 all: halt shell matmult sort hola_mundo write_console run_hola_mundo run_halt run_2_threads\
-     print_a print_b print_ab array join_10 join_endless
+     print_a print_b print_ab print_args array join_10 join_endless debug_args
 
 start.o: start.s ../userprog/syscall.h
 	$(CPP) $(CPPFLAGS) start.s > strt.s
