[IMP] Almost working shell v0.2.1

--- a/test/Makefile
+++ b/test/Makefile
@@ -36,7 +36,7 @@ CFLAGS = -G 0 -c $(INCDIR) -mips1
 
 all: halt shell matmult sort hola_mundo write_console run_hola_mundo run_halt run_2_threads\
      print_a print_b print_ab print_args array join_10 join_endless debug_args shell_ori\
-     echo
+     echo cat
 
 start.o: start.s ../userprog/syscall.h
 	$(CPP) $(CPPFLAGS) start.s > strt.s
