--- a/Makefile.common
+++ b/Makefile.common
@@ -25,7 +25,7 @@
 # All rights reserved.  See copyright.h for copyright notice and limitation 
 # of liability and disclaimer of warranty provisions.
 
-CFLAGS = -g -Wall -Wshadow $(INCPATH) $(DEFINES) $(HOST) -DCHANGED
+CFLAGS = -g -Wshadow $(INCPATH) $(DEFINES) $(HOST) -DCHANGED
 LDFLAGS =
 
 # These definitions may change as the software is updated.
