[FIX] Fixed Bugs, all working! :)

--- a/userprog/Makefile
+++ b/userprog/Makefile
@@ -946,9 +946,9 @@ exception_imp.o: ../userprog/exception_imp.cc ../threads/system.h \
  ../bin/noff.h ../threads/scheduler.h ../machine/interrupt.h \
  ../machine/stats.h ../machine/timer.h ../userprog/synchconsole.h \
  ../threads/synch.h ../machine/console.h ../userprog/syscall.h \
- ../userprog/syscall_utils.h ../userprog/addrspace.h \
- ../userprog/exception_imp.h /usr/include/c++/4.6/map \
- /usr/include/c++/4.6/bits/stl_tree.h \
+ ../userprog/../threads/synch.h ../userprog/syscall_utils.h \
+ ../userprog/addrspace.h ../userprog/exception_imp.h \
+ /usr/include/c++/4.6/map /usr/include/c++/4.6/bits/stl_tree.h \
  /usr/include/c++/4.6/bits/stl_algobase.h \
  /usr/include/c++/4.6/i686-linux-gnu/./bits/c++config.h \
  /usr/include/c++/4.6/i686-linux-gnu/./bits/os_defines.h \
