--- a/filesys/Makefile
+++ b/filesys/Makefile
@@ -965,7 +965,8 @@ exception_imp.o: ../userprog/exception_imp.cc ../threads/system.h \
  ../bin/noff.h ../threads/scheduler.h ../machine/interrupt.h \
  ../machine/stats.h ../machine/timer.h ../filesys/synchdisk.h \
  ../machine/disk.h ../threads/synch.h ../userprog/synchconsole.h \
- ../machine/console.h ../userprog/syscall.h ../userprog/syscall_utils.h \
+ ../machine/console.h ../userprog/syscall.h \
+ ../userprog/../threads/synch.h ../userprog/syscall_utils.h \
  ../userprog/addrspace.h ../userprog/exception_imp.h \
  /usr/include/c++/4.6/map /usr/include/c++/4.6/bits/stl_tree.h \
  /usr/include/c++/4.6/bits/stl_algobase.h \
