--- a/Makefile.dep
+++ b/Makefile.dep
@@ -7,13 +7,16 @@
 # Depending on your platform, you need to select the correct definition.
 # Also, you need to edit the Makefile in the bin subdirectory.
 
+HOST=-DHOST_$(shell uname -m | sed -e 's/686/386/') -DHOST_LINUX
+CPP=gcc
+
 # Linux i386 (default)
 #HOST = -DHOST_i386 -DHOST_LINUX
 #CPP=gcc
 
 # Linux x86_64
-HOST = -DHOST_x86_64 -DHOST_LINUX
-CPP=gcc
+#HOST = -DHOST_x86_64 -DHOST_LINUX
+#CPP=gcc
 
 # SUN SPARC, Sun 4.xx (not supported, just to show how to declare a
 # big-endian processor)
